--- a/client/lib/dune
+++ b/client/lib/dune
@@ -1,5 +1,5 @@
 (library
  (name shared)
- (libraries irmin-unix irmin-server irmin-client-unix brr)
+ (libraries irmin.mem irmin-server irmin-client-unix brr)
  (preprocess
   (pps ppx_irmin)))
