--- a/server/dune
+++ b/server/dune
@@ -1,6 +1,6 @@
 (executables
  (names server)
- (libraries irmin-unix irmin-server)
+ (libraries irmin-git.unix irmin-server.unix)
  (modules server)
  (preprocess
   (pps ppx_irmin)))
